syntax = "proto3";

option csharp_namespace = "OpenTTD.AdminClient";

package server;

// The greeting service definition.
service Server {
  // Sends a greeting
  rpc AddServer (ServerCredentialsRequest) returns (ServerAddedResponse);
}

// The request message containing the user's name.
message ServerCredentialsRequest {
  string ipAddress = 1;
}

// The response message containing the greetings.
message ServerAddedResponse {
  string message = 1;
}
